              routine addVariable() now returns bool.
        Class NSignature, NSigCensus, NSigPartialIsomorphism:
            - Added.
        Class NString:
            - Added C++ string copy constructor.
        Class NTriangulation:
            - Added insertSplittingSurface().
            - Uses NIndexedArrays for skeletal elements for fast index lookup.
        Class reference_wrapper, remove_pointer:
            - Added for use with Standard Template Library.
        Class select1st, select2nd, unary_compose:
            - Added for use with Standard Template Library.
        Class XMLParser, XMLParserCallback:
            - Added.
        Class ZBuffer, CompressionBuffer, DecompressionBuffer,
                CompressionStream, DecompressionStream:
            - Added.
        Routine readFileMagic(), readXMLFile(), writeXMLFile():
            - Added.
        Routine xmlEncodeSpecialChars(), xmlValueTag():
            - Added.
    JAVA USER INTERFACE:
        Overall structure:
            - Incorporated engine enhancements listed above.
        normal.engine.implementation.jni.JNIShareableObject:
            - Added static method sameCppPtr() which is necessary when
              using gcc3.
        normal.exports:
            - Added class ReginaBinaryExporter.

Version 2.4  [ 4 April, 2002 ]
    OVERALL:
        - Much enhanced documentation.
        - Added SnapPea census and knot/link census to examples.
        - Added functionality changelog (HIGHLIGHTS.txt).
        - Added prepackaged Jython library directory.
    ENGINE:
        Overall structure:
            - Moved engine/imports to engine/foreign.
        Class NAngleStructure, NAngleStructureList, NAngleStructureVector:
            - Added.
        Class NConeRay:
            - Now a new class of its own accord, derived from
              NVectorDense and created to allow vertex solution routines
              to work in contexts outside normal surfaces.
        Class NNormalSurface: